--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="/img/1x/SVG/logga.svg">
 <link rel="stylesheet" href="https://use.typekit.net/lre8son.css">
@@ -36,7 +37,7 @@
 </section>
 
 <header>
-    <img src="/img/loggavit.png" width="500px" alt="" class="w3-animate-fading">
+    <img src="/img/loggavit.png" alt="" class="w3-animate-fading">
 </header>
 
 <main>
