--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
     
             <p>Böksholm levererar alltid en unik och rolig liveupplevelse med stor värme och mycket glimt i ögat. 
                 Musiken har hämtat inspiration från både tänkbara och otänkbara håll men kan i förstahand ses som en blandning mellan skrotig visa, 
-                progg, gypsy och rock. 
-                Innehållsrika, politiska och samhällskritiska texter och mellansnack varvas med kravlös humor.</p> 
+                progg, gypsy och rock. </p>
+            
+                <p>Innehållsrika, politiska och samhällskritiska texter och mellansnack varvas med kravlös humor.</p> 
 
                 <button class="button"><span>Se Böksholm</span></button>
                 <button class="button"><span>Boka Böksholm</span></button>
