--- a/boka.html
+++ b/boka.html
@@ -3,6 +3,7 @@
 
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="icon" type="image/x-icon" href="/img/1x/SVG/logga.svg">
 <link rel="stylesheet" href="https://use.typekit.net/lre8son.css">
@@ -37,11 +38,16 @@
 </header>
 
 <main>
+
+<section id="bokning">
+  <p>Genom att fylla i forumeläret kan du skicka en bokningsförfrågan till Böksholm. Ange vilken typ av sammanhang bokningen avser, datum och tid, plats och andra detaljer som är relevant för bokningen. Formuläret går även att använda för övrig kontakt med bandet. </p>
+  <p>Eller varför inte slå en signal? 070 000 00 00</p>
+</section>
+
     
-    <section id="form">
+<section id="form">
         
         <div class="container">
-            <h1>Boka oss!</h1>
             <form action="/action_page.php">
               <div class="row">
                 <div class="col-25">
@@ -95,7 +101,7 @@
               </div>
             </form>
           </div>
-    </section>
+</section>
 </main>
 
 
