--- a/boka.html
+++ b/boka.html
@@ -33,16 +33,20 @@
       <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; Meny </span>
 </nav>
 
-<header>
+<header id="boka">
+  
     <h1 class="center">Här kan du boka Böksholm!</h1>
+
+    <section id="bokning">
+      <p>Genom att fylla i forumeläret kan du skicka en bokningsförfrågan till Böksholm. Ange vilken typ av sammanhang bokningen avser, datum och tid, plats och andra detaljer som är relevant för bokningen. Formuläret går även att använda för övrig kontakt med bandet. </p>
+      <p>Eller varför inte slå en signal? 070 000 00 00</p>
+    </section>
+
 </header>
 
 <main>
 
-<section id="bokning">
-  <p>Genom att fylla i forumeläret kan du skicka en bokningsförfrågan till Böksholm. Ange vilken typ av sammanhang bokningen avser, datum och tid, plats och andra detaljer som är relevant för bokningen. Formuläret går även att använda för övrig kontakt med bandet. </p>
-  <p>Eller varför inte slå en signal? 070 000 00 00</p>
-</section>
+
 
     
 <section id="form">
