--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
 
 
-<header>
+<header id="index">
+
     <img src="/img/loggavit.png" alt="" class="w3-animate-fading">
     <section id="links">
 
