--- a/boka.html
+++ b/boka.html
@@ -18,7 +18,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
         <div class="overlay-content">
-        <a href="index.html"><img src="/img/loggavit.png" width="100px"  alt=""></a>
+        <a href="index.html"><img src="/img/loggavit.png" width="100px" class="loggasvart" alt=""></a>
           <a href="om.html">Om oss</a>
           <a href="boka.html">Boka</a>
           <a href="skivor.html">Butik</a>
@@ -79,6 +79,7 @@
 
 
 <footer>
+  <a href="index.html"><img src="/img/loggavit.png" width="100px" class="footer" alt=""></a>
 </footer>
      
 </body>
