--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
         <div class="overlay-content">
-            <a href="#">Om oss</a>
+            <a href="om.html">Om oss</a>
             <a href="boka.html">Boka</a>
             <a href="#">Butik</a>
         </div>
@@ -73,6 +73,7 @@
 </main>
 
 <footer>
+    <a href="index.html"><img src="/img/loggavit.png" width="100px" class="footer" alt=""></a>
 </footer>
      
 </body>
