--- a/om.html
+++ b/om.html
@@ -18,7 +18,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
         <div class="overlay-content">
-            <a href="index.html"><img src="/img/loggavit.png" width="100px"  alt=""></a>
+            <a href="index.html"><img src="/img/loggavit.png" width="100px" class="loggasvart" alt=""></a>
           <a href="om.html">Om oss</a>
           <a href="boka.html">Boka</a>
           <a href="skivor.html">Butik</a>
@@ -32,10 +32,19 @@
       <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; Meny </span>
 </nav>
 <main>
+
+  <div id="galleri">
+    <img src="/img/1x/1x/1x/nyheader-8.png" alt="">
+    <img src="/img/boksholmheaderjenniejohn.jpg" alt="">
+    <img src="/img/boksholmbrofilip.jpg" alt="">
+    <img src="/img/boksholmbro.jpg" alt="">
+  </div>
+  
     
 </main>
 
 <footer>
+  <a href="index.html"><img src="/img/loggavit.png" width="100px" class="footer" alt=""></a>
 </footer>
      
 </body>
