--- a/skivor.html
+++ b/skivor.html
@@ -19,7 +19,7 @@
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
         <div class="overlay-content">
-            <a href="index.html"><img src="/img/loggavit.png" width="100px"  alt=""></a>
+            <a href="index.html"><img src="/img/loggavit.png" class="loggasvart" width="100px"  alt=""></a>
           <a href="om.html">Om oss</a>
           <a href="boka.html">Boka</a>
           <a href="skivor.html">Butik</a>
@@ -34,8 +34,9 @@
 </nav>
 
 <header>
-    <img src="/img/bokaoss.png" width="800px"alt="">
-    <form action=""></form>
+    <img src="/img/satsumasochjag.jpg" width="800px"alt="">
+    <img src="/img/dömedpengar.jpg" width="800px"alt="">
+    <img src="/img/boksholmtroja.jpg" width="800px"alt="">
 </header>
 
 <main>
@@ -43,6 +44,7 @@
 </main>
 
 <footer>
+    <a href="index.html"><img src="/img/loggavit.png" width="100px" class="footer" alt=""></a>
 </footer>
      
 </body>
