--- a/skivor.html
+++ b/skivor.html
@@ -30,7 +30,13 @@
         
     </div>
       
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; Meny </span>
+      <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; </span>
+      <div>
+        <img src="/img/loggavit.png" alt="" width="100px" class="centerImg">
+      </div>
+      <div>
+        <img src="/img/1x/SVG/SVG/kontakt.svg" alt="" width="30px" class="centerImg">
+      </div>
 </nav>
 
 <header>
