--- a/boka.html
+++ b/boka.html
@@ -19,7 +19,7 @@
 
         <div class="overlay-content">
         <a href="index.html"><img src="/img/loggavit.png" width="100px" class="loggasvart" alt=""></a>
-          <a href="om.html">Om oss</a>
+        <a href="om.html">Spelschema</a>
           <a href="boka.html">Boka</a>
           <a href="skivor.html">Butik</a>
           <a href="https://www.youtube.com/user/boksholm" target="_blank"><img src="/img/1x/SVG/youtube.svg" width="100px" alt=""></a>
@@ -29,11 +29,17 @@
         
     </div>
       
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; Meny </span>
+      <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; </span>
+      <div>
+       <a href="/index.html"><img src="/img/loggavit.png" alt="" width="100px" class="centerImg"></a> 
+      </div>
+      <div>
+        <a href="/boka.html"><img src="/img/1x/SVG/SVG/kontakt.svg" alt="" width="30px" class="centerImg"></a> 
+      </div>
 </nav>
 
 <header id="boka">
-    <h1 class="center">Här kan du boka Böksholm!</h1>
+    <h1 class="center">Här kan du boka eller kontakta Böksholm!</h1>
 </header>
 
 <main>
