--- a/om.html
+++ b/om.html
@@ -19,7 +19,7 @@
 
         <div class="overlay-content">
             <a href="index.html"><img src="/img/loggavit.png" width="100px" class="loggasvart" alt=""></a>
-          <a href="om.html">Om oss</a>
+          <a href="om.html">Spelschema</a>
           <a href="boka.html">Boka</a>
           <a href="skivor.html">Butik</a>
           <a href="https://www.youtube.com/user/boksholm" target="_blank"><img src="/img/1x/SVG/youtube.svg" width="100px" alt=""></a>
@@ -29,15 +29,16 @@
         
     </div>
       
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776;</span>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; </span>
       <div>
-        <img src="/img/loggavit.png" alt="" width="100px" class="centerImg">
+       <a href="/index.html"><img src="/img/loggavit.png" alt="" width="100px" class="centerImg"></a> 
       </div>
       <div>
-        <img src="/img/1x/SVG/SVG/kontakt.svg" alt="" width="30px" class="centerImg">
+        <a href="/boka.html"><img src="/img/1x/SVG/SVG/kontakt.svg" alt="" width="30px" class="centerImg"></a> 
       </div>
 </nav>
 <main>
+
 
 
 
