--- a/skivor.html
+++ b/skivor.html
@@ -30,13 +30,13 @@
         
     </div>
       
-      <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; </span>
-      <div>
-        <img src="/img/loggavit.png" alt="" width="100px" class="centerImg">
-      </div>
-      <div>
-        <img src="/img/1x/SVG/SVG/kontakt.svg" alt="" width="30px" class="centerImg">
-      </div>
+    <span style="font-size:30px;cursor:pointer" onclick="openNav()"> &#9776; </span>
+    <div>
+     <a href="/index.html"><img src="/img/loggavit.png" alt="" width="100px" class="centerImg"></a> 
+    </div>
+    <div>
+      <a href="/boka.html"><img src="/img/1x/SVG/SVG/kontakt.svg" alt="" width="30px" class="centerImg"></a> 
+    </div>
 </nav>
 
 <header>
