--- a/om.html
+++ b/om.html
@@ -37,10 +37,12 @@
         <a href="/boka.html"><img src="/img/1x/SVG/SVG/kontakt.svg" alt="" width="30px" class="centerImg"></a> 
       </div>
 </nav>
+
+<header id="schema">
+
+</header>
+
 <main>
-
-
-
 
   <div id="galleri">
     <img src="/img/1x/1x/1x/nyheader-8.png" alt="">
@@ -49,8 +51,6 @@
     <img src="/img/boksholmbro.jpg" alt="">
   </div>
   
-  
-    
 </main>
 
 <footer>
